--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = [
   "~/.config/alacritty/catppuccin-mocha.toml"
 ]
@@ -10,20 +11,20 @@ size = 14.0
 
 [font.bold]
 # family = "MesloLGS Nerd Font Mono"
-family = "CaskaydiaCove Nerd Font"
+family = "JetBrainsMono NF"
 style = "Bold"
 
 [font.bold_italic]
-family = "CaskaydiaCove Nerd Font"
+family = "JetBrainsMono NF"
 # family = "MesloLGS Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "CaskaydiaCove Nerd Font"
+family = "JetBrainsMono NF"
 # family = "MesloLGS Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
 # family = "MesloLGS Nerd Font Mono"
-family = "CaskaydiaCove Nerd Font"
+family = "JetBrainsMono NF"
 style = "Regular"
