--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -54,10 +54,10 @@ secondary = ${colors.mantle}
 alert = ${colors.red}
 disabled = ${colors.subtext1}
 
-[bar/toph]
+[bar/main]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 28pt
+height = 24pt
 radius = 0
 
 ; dpi = 96
@@ -65,7 +65,7 @@ radius = 0
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = true
+bottom = false
 
 line-size = 6pt
 
@@ -80,10 +80,10 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.flamingo}
 
-font-0 = MesloLGS Nerd Font Mono:size=14;6
+font-0 = JetbrainsMono NF:size=14;6
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-right = pulseaudio battery memory cpu tray date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -96,11 +96,12 @@ enable-ipc = true
 
 ; override-redirect = true
 
-[module/systray]
+[module/tray]
 type = internal/tray
 
-format-margin = 8pt
-tray-spacing = 16pt
+format-margin = 4px
+tray-spacing = 8px
+
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -140,13 +141,13 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
+label-muted = 
 label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
@@ -164,14 +165,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
